Ya realice el mock de mi lista todo con los estilos ahora me corresponde hacerle la lógica al proyecto

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
+:root{
+ --color-Black: #1A120B;
+ --color-Brown: #3C2A21;
+ --color-Belge: #D5CEA3;
+ --color-Belge-shine: #E5E5CB;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 320px;
+  height: auto;
+  padding: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color:var(--color-Belge);
+  border: 1 solid var(--color-Brown);
+  border-radius: 20px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
