--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--color-Black);
+  color: var(--color-Brown);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 100px;
 }
 
 code {
