--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,13 @@
 .App {
   width: 320px;
   height: auto;
-  padding: 30px;
+  padding: 30px 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color:var(--color-Belge);
   border: 1 solid var(--color-Brown);
-  border-radius: 20px;
+  border-radius:0 0 20px 20px;
 }
 
